# Wanderer

./: CMakeLists.txt  createClass.bat  main.cpp
blenderFiles/: Ball.blend  Cube.blend  CubeTopBevel.blend  CubeTopBevel.blend1  Test.blend  Test.blend1
lib/glad/: glad.c  glad.h
objImporter/: CMakeLists.txt  README.txt
objImporter/include/: CMakeLists.txt
objImporter/include/objImporter/: CMakeLists.txt  objImporter.hpp
objImporter/src/objImporter/: objImporter.cpp
resources/: Cube.dae
resources/object/: Ball.mtl  Test.mtl
shader/: CMakeLists.txt
shader/include/shader/: fShaderSource_3D.fs  shader.hpp  shaderSource_3D.ss
shader/src/: CMakeLists.txt
shader/src/shader/: CMakeLists.txt  shader.cpp
